# blender-mpm

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  QUICKSTART.md  README.md  SETUP_GITHUB.md  build.py  requirements.txt
.github/workflows/: build.yml  test.yml
bindings/: CMakeLists.txt  bindings.cpp
blender_mpm/: __init__.py  cache.py  operators.py  panels.py  properties.py  utils.py
blender_mpm/lib/: .gitkeep
cmake/: Findpybind11.cmake
examples/: fluid_dam_break.py  sand_pile.py  snow_ball.py
include/mpm/: cuda_utils.h  material.h  solver.h  types.h
src/: CMakeLists.txt  material.cpp  solver.cpp  types.cpp
src/cuda/: kernels.cu  material_kernels.cu  svd.cu
tests/: CMakeLists.txt  test_basic.cpp
